--- a/templates/WebApp/map_from_GEE.html
+++ b/templates/WebApp/map_from_GEE.html
@@ -106,7 +106,8 @@
                                                             </li>
 
                                                         </ul>
-                                                        <div class="border-grey bg-white tab-content" style="height: 30vh;overflow: auto;">
+                                                        <div class="border-grey bg-white tab-content"
+                                                             style="height: 30vh;overflow: auto;">
                                                             <div class="tab-pane active  p-3 ml-3" id="layers"
                                                                  role="tabpanel"
                                                                  aria-labelledby="layers-tab"><p>
@@ -127,8 +128,9 @@
                                                             </p>
 
                                                                 <input id="opacity_collection" type="range"
-                                                                     max="1"
-                                                                       min="0" step="0.01"/><label class="ml-1" id="collection_opacity"></label>
+                                                                       max="1"
+                                                                       min="0" step="0.01"/><label class="ml-1"
+                                                                                                   id="collection_opacity"></label>
 
                                                                 <p>
                                                                     <label class="form-check-label mt-2 w-75"
@@ -146,7 +148,8 @@
 
                                                                 <input id="opacity_asset" type="range"
                                                                        max="1" min="0"
-                                                                       step="0.01"/><label class="ml-1" id="asset_opacity"></label>
+                                                                       step="0.01"/><label class="ml-1"
+                                                                                           id="asset_opacity"></label>
 
 
                                                             </div>
