--- a/templates/WebApp/chart_from_ClimateSERV.html
+++ b/templates/WebApp/chart_from_ClimateSERV.html
@@ -1,21 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "WebApp/app_base.html" %}
 {% load static %}
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <title>SERVIR AppTemplate</title>
-    <!-- Custom fonts-->
-    <link href="{% static '/css/all.min.css' %}" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
-          rel="stylesheet">
-    <!-- Bootstrap-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
+{% block title %}SERVIR AppTemplate - Home{% endblock %}
+{% block script %}
     <!-- Highcharts-->
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script src="https://code.highcharts.com/modules/data.js"></script>
@@ -24,78 +11,80 @@
     <script src="https://code.highcharts.com/modules/export-data.js"></script>
     <script src="https://code.highcharts.com/modules/accessibility.js"></script>
     <!-- Custom styles-->
-    <link href="{% static '/css/basic.css' %}" rel="stylesheet">
-    <!-- Ajax calls-->
     <script src="{% static '/js/ajax_calls.js' %}"></script>
+    <style>
+        html {
+            height: 100%;
+        }
 
-</head>
-<body id="page-top">
-<div id="wrapper">
-{#    {% include "WebApp/sidebar.html" %}#}
-    <!-- Content Wrapper -->
-    <div id="content-wrapper" class="d-flex flex-column">
-        <!-- Main Content -->
-        <div id="content">
-            {% include "WebApp/topbar.html" %}
-            <div class="container-fluid">
-                <div class="row d-flex justify-content-center">
-                    <!-- Line Chart -->
-                    <div class="col-xl-12 col-lg-12 text-center mt-4">
-                        <label class="form-label" for="customFile">Upload a json file with polygon geometry.</label>
-                        <label class="form-label" for="sampleFile">Please download a sample geojson file <a href="{% static 'js/sample.geojson' %}" download>here</a></label>
-                        <input type="file" class="form-control" id="selectFiles"/>
-                        <hr>
-                        <div class="card shadow mb-4">
-                            <!-- Card Header - Dropdown -->
-                            <div
-                                    class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                                <h6 class="m-0 font-weight-bold text-primary">Chart Analysis from ClimateSERV</h6>
-                                <div class="dropdown no-arrow">
-                                    <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
-                                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
-                                    </a>
-                                    <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in"
-                                         aria-labelledby="dropdownMenuLink">
-                                        <div class="dropdown-header">Dropdown Header:</div>
-                                        <a class="dropdown-item" href="#">Action</a>
-                                        <a class="dropdown-item" href="#">Another action</a>
-                                        <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item" href="#">Something else here</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- Card Body -->
-                            <div class="card-body">
-                                <figure class="highcharts-figure">
-                                    <div id="chart-container2"></div>
-                                    <p class="highcharts-description">
-                                        This chart shows the use of a Line charts.
-                                </figure>
+        #wrapper {
+            min-height: calc(100vh - 50px);
+        }
+    </style>
+
+{% endblock %}
+
+{% block content %}
+    <div class="container-fluid">
+        <div class="row d-flex justify-content-center">
+            <!-- Line Chart -->
+            <div class="col-xl-12 col-lg-12 text-center mt-4">
+                <label class="form-label" for="customFile">Upload a json file with polygon geometry.</label>
+                <label class="form-label" for="sampleFile">Please download a sample geojson file <a
+                        href="{% static 'js/sample.geojson' %}" download>here</a></label>
+                <input type="file" class="form-control" id="selectFiles"/>
+                <hr>
+                <div class="card shadow mb-4">
+                    <!-- Card Header - Dropdown -->
+                    <div
+                            class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                        <h6 class="m-0 font-weight-bold text-primary">Chart Analysis from ClimateSERV</h6>
+                        <div class="dropdown no-arrow">
+                            <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
+                               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
+                            </a>
+                            <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in"
+                                 aria-labelledby="dropdownMenuLink">
+                                <div class="dropdown-header">Dropdown Header:</div>
+                                <a class="dropdown-item" href="#">Action</a>
+                                <a class="dropdown-item" href="#">Another action</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="#">Something else here</a>
                             </div>
                         </div>
                     </div>
+                    <!-- Card Body -->
+                    <div class="card-body">
+                        <figure class="highcharts-figure">
+                            <div id="chart-container2"></div>
+                            <p class="highcharts-description">
+                                This chart shows the use of a Line charts.
+                        </figure>
+                    </div>
                 </div>
-                  <div class="row">
-                            <div class="col-lg-12 mb-4">
-                                <div class="card shadow mb-4">
-                                    <div class="card-header py-3">
-                                        <h6 class="m-0 font-weight-bold text-primary">Modifying this page</h6>
-                                    </div>
-                                    <div class="card-body">
-                                        <div class="text-left text-dark alert alert-info">
-                                            <strong>templates/WebApp/chart_from_ClimateSERV.html</strong> contains the HTML code to modify
-                                            the text and graphics in this page.
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12 mb-4">
+                <div class="card shadow mb-4">
+                    <div class="card-header py-3">
+                        <h6 class="m-0 font-weight-bold text-primary">Modifying this page</h6>
+                    </div>
+                    <div class="card-body">
+                        <div class="text-left text-dark alert alert-info">
+                            <strong>templates/WebApp/chart_from_ClimateSERV.html</strong> contains the HTML code to
+                            modify
+                            the text and graphics in this page.
                         </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-</div>
-<script src="{% static '/js/chart_from_ClimateSERV.js' %}"></script>
 
-</body>
-</html>
+    <script src="{% static '/js/chart_from_ClimateSERV.js' %}"></script>
+
+{% endblock %}
+
+
