--- a/templates/WebApp/chart_from_netCDF.html
+++ b/templates/WebApp/chart_from_netCDF.html
@@ -1,21 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "WebApp/app_base.html" %}
 {% load static %}
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <title>SERVIR AppTemplate</title>
-    <!-- Custom fonts-->
-    <link href="{% static '/css/all.min.css' %}" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
-          rel="stylesheet">
-    <!-- Bootstrap-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
+{% block title %}SERVIR AppTemplate - Home{% endblock %}
+{% block script %}
     <!-- Highcharts-->
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script src="https://code.highcharts.com/modules/data.js"></script>
@@ -25,17 +12,20 @@
     <script src="https://code.highcharts.com/modules/accessibility.js"></script>
     <!-- Custom styles-->
     <script src="{% static '/js/ajax_calls.js' %}"></script>
-    <link href="{% static '/css/basic.css' %}" rel="stylesheet">
+    <style>
+    html {
+        height:100%;
+    }
+    #wrapper {
+        min-height: calc(100vh - 50px);
+    }
+    </style>
 
-</head>
-<body id="page-top">
-    <div id="wrapper">
-{#        {% include "WebApp/sidebar.html" %}#}
-        <!-- Content Wrapper -->
-        <div id="content-wrapper" class="d-flex flex-column">
-            <!-- Main Content -->
-            <div id="content">
-                {% include "WebApp/topbar.html" %}
+{% endblock %}
+
+{% block content %}
+
+
                 <div class="container-fluid">
                     <div class="row d-flex justify-content-center">
                         <!-- Line Chart -->
@@ -91,10 +81,5 @@
                             </div>
                         </div>
                 </div>
-            </div>
-        </div>
-    </div>
     <script src="{% static '/js/chart_from_netCDF.js' %}"></script>
-
-</body>
-</html>
+{% endblock %}
