--- a/templates/WebApp/map_fullscreen.html
+++ b/templates/WebApp/map_fullscreen.html
@@ -127,7 +127,8 @@
                                     </div>
 
                                     <input id="opacity_chirps_full" type="range" value="contrast" max="0.5"
-                                           min="0" step="0.1"/>
+                                           min="0" step="0.01"/><label class="ml-1"
+                                                                                                   id="chirps_full_opacity"></label>
 
 
                                     <div class="d-inline-flex"><input class="form-check-input" id="esi_full"
@@ -141,7 +142,8 @@
                                     </div>
 
                                     <input id="opacity_esi_full" type="range" value="contrast" max="0.5" min="0"
-                                           step="0.1"/>
+                                           step="0.01"/><label class="ml-1"
+                                                                                                   id="esi_full_opacity"></label>
 
                                 </div>
                             </div>
