--- a/WebApp/static/css/map1.css
+++ b/WebApp/static/css/map1.css
@@ -26,8 +26,12 @@
     max-width: 75%;
 }
 
-.leaflet-control-zoom.leaflet-bar.leaflet-control{
-    width:36px;
+.leaflet-top.leaflet-right {
+    margin-right: 10px;
+}
+
+.leaflet-control-zoom.leaflet-bar.leaflet-control {
+    width: 34px;
 }
 
 .nav-tabs .nav-item .nav-link.active {
