chart sqlite to select station

--- a/templates/WebApp/chart_from_SQLite.html
+++ b/templates/WebApp/chart_from_SQLite.html
@@ -20,6 +20,9 @@
         <div class="row d-flex justify-content-center mt-5">
             <!-- Area Chart -->
             <div class="col-xl-12 col-lg-12">
+                 <label>Please select a station to get the respective chart</label>
+                <select id="stations">
+            </select>
                 <div class="card shadow mb-4">
                     <!-- Card Header - Dropdown -->
                     <div
@@ -40,8 +43,10 @@
                             </div>
                         </div>
                     </div>
+
                     <!-- Card Body -->
                     <div class="card-body">
+
                         <figure class="highcharts-figure">
                             <div id="chart-container3"></div>
                             <p class="highcharts-description">
