--- a/templates/WebApp/feedback.html
+++ b/templates/WebApp/feedback.html
@@ -3,17 +3,36 @@
 {% block title %}SERVIR AppTemplate - Feedback{% endblock %}
 {% block script %}
     <!-- Custom styles-->
+    <style>
+        .content {
+            display: flex;
+            width: 100%;
+            height: 100%;
+            flex-direction: column;
+            background-color: blue;
+            overflow: hidden;
+        }
 
+        .second-row {
+            flex-grow: 1;
+            border: none;
+            margin: 0;
+            padding: 0;
+        }
+
+        #content {
+            display: flex;
+            flex-direction: column;
+        }
+    </style>
     <!-- Custom scripts-->
 
 {% endblock %}
 
 {% block content %}
-    <div class="container-fluid">
-        <div class="row">
-            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdpBjfXz9ETRiQnFgy4Y6eXKKQjwA1H6-c-qva_2VN_1vDQ6g/viewform?usp=sf_link"
-                    width="640" height="949" frameborder="0" marginheight="0" marginwidth="0">Loading…
-            </iframe>
-        </div>
-    </div>
+
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdpBjfXz9ETRiQnFgy4Y6eXKKQjwA1H6-c-qva_2VN_1vDQ6g/viewform?usp=sf_link"
+            class="second-row">Loading…
+    </iframe>
+
 {% endblock %}
