--- a/templates/WebApp/chart_from_SQLite.html
+++ b/templates/WebApp/chart_from_SQLite.html
@@ -20,10 +20,9 @@
         <div class="row d-flex justify-content-center mt-5">
             <!-- Area Chart -->
             <div class="col-xl-12 col-lg-12">
-                 <label>Please select a station to get the respective chart</label>
-                <select id="stations">
-            </select>
+
                 <div class="card shadow mb-4">
+
                     <!-- Card Header - Dropdown -->
                     <div
                             class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
@@ -46,6 +45,9 @@
 
                     <!-- Card Body -->
                     <div class="card-body">
+                         <label>Select the station to show: </label>
+                <select id="stations">
+            </select>
 
                         <figure class="highcharts-figure">
                             <div id="chart-container3"></div>
