--- a/templates/WebApp/map_fixedsize.html
+++ b/templates/WebApp/map_fixedsize.html
@@ -197,8 +197,9 @@
 
 
                                                     </div>
-                                                    <div class="tab-pane" id="messages" role="tabpanel"
-                                                         aria-labelledby="legends-tab"></div>
+                                                    <div class="tab-pane" id="legends" role="tabpanel"
+                                                         aria-labelledby="legends-tab"><p class="mt-1 ml-2">Legend for
+                                                        the layer(s) selected</p></div>
                                                     <div class="tab-pane p-3 ml-3" id="location"
                                                          role="tabpanel"
                                                          aria-labelledby="location_tab"><p>Enter location
