--- a/templates/WebApp/about.html
+++ b/templates/WebApp/about.html
@@ -40,19 +40,19 @@
                                 <div class="card-body text-center">
                                     <div class="row row-centered pos">
                                             <div class="col-sm-3">
-                                                <div><img src="{% static 'images/generic_profile.jpg' %}" alt="img1" class="img-thumbnail">
+                                                <div><img src="{% static 'images/teammembers/TeamMember1.jpg' %}" alt="img1" class="img-thumbnail">
                                                     <p>Team member 1</p></div>
                                             </div>
                                             <div class="col-sm-3">
-                                                <div><img src="{% static 'images/generic_profile.jpg' %}" alt="img1" class="img-thumbnail">
+                                                <div><img src="{% static 'images/teammembers/TeamMember2.jpg' %}" alt="img1" class="img-thumbnail">
                                                     <p>Team member 2</p></div>
                                             </div>
                                             <div class="col-sm-3">
-                                                <div><img src="{% static 'images/generic_profile.jpg' %}" alt="img1" class="img-thumbnail">
+                                                <div><img src="{% static 'images/teammembers/TeamMember3.jpg' %}" alt="img1" class="img-thumbnail">
                                                     <p>Team member 3</p></div>
                                             </div>
                                             <div class="col-sm-3">
-                                                <div><img src="{% static 'images/generic_profile.jpg' %}" alt="img1" class="img-thumbnail">
+                                                <div><img src="{% static 'images/teammembers/TeamMember4.jpg' %}" alt="img1" class="img-thumbnail">
                                                     <p>Team member 4</p></div>
                                             </div>
                                     </div>
