--- a/templates/WebApp/map_from_GEE.html
+++ b/templates/WebApp/map_from_GEE.html
@@ -128,18 +128,6 @@
 
                                                         <p>
 
-                                                            <div hidden>
-                                                            <input id="colors_coll" value="4" >
-                                                            <input id="color1_coll" value="#1303ff">
-                                                            <input id="color2_coll" value="#42fff6">
-                                                            <input id="color3_coll" value="#f3ff40">
-                                                            <input id="color4_coll" value="#ff5d0f">
-<input id="coll_min" value="258">
-                                                            <input id="coll_max" value="316">
-
-
-                                                        </div>
-
 
                                                             <label class="form-check-label mt-2 w-75"
                                                                    for="asset"><input class="form-check-input"
@@ -211,6 +199,8 @@
 
                                                         <p class="mt-1 ml-2">Legend for
                                                             the layer(s) selected</p>
+{#                                                        <div id='legend_coll'></div>#}
+{#                                                        <div id='legend_asset'></div>#}
                                                     </div>
                                                     <div class="tab-pane p-3 ml-3" id="location_gee"
                                                          role="tabpanel"
