--- a/templates/WebApp/app_base.html
+++ b/templates/WebApp/app_base.html
@@ -18,7 +18,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <link href="{% static '/css/basic.css' %}" rel="stylesheet">
-   <link href="{% static '/css/base.css' %}"  rel="stylesheet" type="text/css">
+    <link href="{% static '/css/base.css' %}" rel="stylesheet" type="text/css">
     {% block script %}{% endblock %}
 </head>
 <body id="page-top">
@@ -129,7 +129,8 @@
         <div class="ml-auto app-power">
 
             <a href="https://servirglobal.net" title="SERVIR Global">
-                <img src="{% static "images/SERVIR_flat_white.png" %}" alt="SERVIR Global" style="margin-left: 8px; max-height: 21px;">
+                <img src="{% static "images/SERVIR_flat_white.png" %}" alt="SERVIR Global"
+                     style="margin-left: 8px; max-height: 21px;">
             </a>
         </div>
 
