--- a/templates/WebApp/map_fullscreen.html
+++ b/templates/WebApp/map_fullscreen.html
@@ -251,7 +251,11 @@
 
                 </div>
             </div>
-            <div id="map3" style="height:calc(100vh - 166px);"></div>
+            <div id="map3" style="height:calc(100vh - 166px);">
+                <div id="loading_full">
+                    <img id="loading-image-full" src="{% static 'images/loading.gif' %}" alt="Loading..."/>
+                </div>
+            </div>
 
             <script src="{% static 'js/map_fullscreen.js' %}"></script>
 
