--- a/WebApp/static/css/map1.css
+++ b/WebApp/static/css/map1.css
@@ -147,30 +147,53 @@ p {
     display: contents;
 }
 
-#legend_chirps,#legend_asset,#legend_coll{
+#legend_chirps, #legend_asset, #legend_coll {
     background: black;
     width: fit-content;
     left: 10px;
 }
-#legend_chirps img{
+
+#legend_chirps img {
     background: black;
     width: fit-content;
     left: 10px;
 }
-#legend_esi img{
+
+#legend_esi img {
     background: white;
     width: fit-content;
     left: 10px;
 
 }
-#legend_chirps,#legend_esi{
-     display: inline-flex;
+
+#legend_chirps, #legend_esi {
+    display: inline-flex;
     margin: 10px;
 }
-label{
+
+label {
     color: gray;
 }
-#legend_asset,#legend_coll{
+
+#legend_asset, #legend_coll {
     display: contents;
 
+}
+
+#loading, #loading_gee, #loading_fixed, #loading_full {
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    opacity: 0.7;
+    background-color: #fff;
+    z-index: 500;
+}
+
+#loading-image, #loading-image-gee, #loading-image-fixed, #loading-image-full {
+    z-index: 500;
 }
