--- a/templates/WebApp/chart_from_netCDF.html
+++ b/templates/WebApp/chart_from_netCDF.html
@@ -13,12 +13,13 @@
     <!-- Custom styles-->
     <script src="{% static '/js/ajax_calls.js' %}"></script>
     <style>
-    html {
-        height:100%;
-    }
-    #wrapper {
-        min-height: calc(100vh - 50px);
-    }
+        html {
+            height: 100%;
+        }
+
+        #wrapper {
+            min-height: calc(100vh - 50px);
+        }
     </style>
 
 {% endblock %}
@@ -26,60 +27,65 @@
 {% block content %}
 
 
-                <div class="container-fluid">
-                    <div class="row d-flex justify-content-center">
-                        <!-- Line Chart -->
-                        <div class="col-xl-12 col-lg-12 text-center mt-4">
-                            <label class="form-label" for="customFile">Upload a json file with polygon geometry.</label>                        <label class="form-label" for="sampleFile">Please download a sample geojson file <a href="{% static 'js/sample.geojson' %}" download>here</a></label>
+    <div class="container-fluid">
+        <div class="row d-flex justify-content-center">
+            <!-- Line Chart -->
+            <div class="col-xl-12 col-lg-12 text-center mt-4">
+                <label class="form-label" for="customFile">Upload a json file with polygon geometry.</label> <label
+                    class="form-label" for="sampleFile">Please download a sample geojson file <a
+                    href="{% static 'js/sample.geojson' %}" download>here</a></label>
 
-                            <input type="file" class="form-control" id="selectFiles"/>
-                            <hr>
-                            <div class="card shadow mb-4">
-                                <!-- Card Header - Dropdown -->
-                                <div
-                                        class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                                    <h6 class="m-0 font-weight-bold text-primary">Chart Analysis from NetCDF</h6>
-                                    <div class="dropdown no-arrow">
-                                        <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
-                                           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                            <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
-                                        </a>
-                                        <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in"
-                                             aria-labelledby="dropdownMenuLink">
-                                            <div class="dropdown-header">Dropdown Header:</div>
-                                            <a class="dropdown-item" href="#">Action</a>
-                                            <a class="dropdown-item" href="#">Another action</a>
-                                            <div class="dropdown-divider"></div>
-                                            <a class="dropdown-item" href="#">Something else here</a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <!-- Card Body -->
-                                <div class="card-body">
-                                    <figure class="highcharts-figure">
-                                        <div id="chart-container"></div>
-                                        <p class="highcharts-description">
-                                            This chart shows the use of a Line charts.
-                                    </figure>
-                                </div>
+                <input type="file" class="form-control" id="selectFiles"/>
+                <hr>
+                <div class="card shadow mb-4">
+                    <!-- Card Header - Dropdown -->
+                    <div
+                            class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                        <h6 class="m-0 font-weight-bold text-primary">Chart Analysis from NetCDF</h6>
+                        <div class="dropdown no-arrow">
+                            <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
+                               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
+                            </a>
+                            <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in"
+                                 aria-labelledby="dropdownMenuLink">
+                                <div class="dropdown-header">Dropdown Header:</div>
+                                <a class="dropdown-item" href="#">Action</a>
+                                <a class="dropdown-item" href="#">Another action</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="#">Something else here</a>
                             </div>
                         </div>
                     </div>
-                      <div class="row">
-                            <div class="col-lg-12 mb-4">
-                                <div class="card shadow mb-4">
-                                    <div class="card-header py-3">
-                                        <h6 class="m-0 font-weight-bold text-primary">Modifying this page</h6>
-                                    </div>
-                                    <div class="card-body">
-                                        <div class="text-left text-dark alert alert-info">
-                                            <strong>templates/WebApp/chart_from_netCDF.html</strong> contains the HTML code to modify
-                                            the text and graphics in this page.
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                    <!-- Card Body -->
+                    <div class="card-body">
+                        <div id="loading">
+                            <img id="loading-image" src="{% static 'images/loading.gif' %}" alt="Loading..."/>
                         </div>
+                        <figure class="highcharts-figure">
+                            <div id="chart-container"></div>
+                            <p class="highcharts-description">
+                                This chart shows the use of a Line charts.
+                        </figure>
+                    </div>
                 </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12 mb-4">
+                <div class="card shadow mb-4">
+                    <div class="card-header py-3">
+                        <h6 class="m-0 font-weight-bold text-primary">Modifying this page</h6>
+                    </div>
+                    <div class="card-body">
+                        <div class="text-left text-dark alert alert-info">
+                            <strong>templates/WebApp/chart_from_netCDF.html</strong> contains the HTML code to modify
+                            the text and graphics in this page.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="{% static '/js/chart_from_netCDF.js' %}"></script>
 {% endblock %}
