--- a/templates/WebApp/map_fixedsize.html
+++ b/templates/WebApp/map_fixedsize.html
@@ -43,7 +43,11 @@
                     <div class="card-body">
                         <link rel="stylesheet" href="{% static 'css/map1.css' %}">
 
-                        <div id="map"></div>
+                        <div id="map">
+                            <div id="loading_fixed">
+                                <img id="loading-image-fixed" src="{% static 'images/loading.gif' %}" alt="Loading..."/>
+                            </div>
+                        </div>
                         {#                                    <button id="settings"><i class="fa fa-cog" aria-hidden="true"></i></button>#}
                         <div class="accordion" id="layer_manager" style="top:12vh">
                             <div class="accordion-item">
